# mimoCoRB

./: .readthedocs.yaml  CONTRIBUTING.md  README.md  ReleaseNotes.md  pyproject.toml  requirements.txt  run.py  run_daq.py  run_mimoDAQ.py  setup.py  setup.py.bak
builddoc/: conf.py  index.rst
doc/: index.rst
docs/: index.html
examples/: demo_setup.yaml  lifetime_setup.py  lifetime_setup.yaml  mimocorb  setup.yaml  simul_spin_setup.yaml  simulsource_setup.yaml  simultest_setup.yaml  spectrum_setup.yaml  spin_setup.yaml
examples/config/: histograms_bottom.yaml  histograms_top.yaml  lifetime_config.yaml  save_bottom.yaml  save_lifetime.yaml  save_top.yaml  simul_spin_config.yaml  simulation_config.yaml  spectrum_config.yaml
examples/modules/: analyzer_client_template.py  file_source.py  filter_client_template.py  filters.py  lifetime_filter.py  lifetime_modules.py  plot.py  plot_histograms.py  plot_waveform.py  pulseSimulator.py  read_from_buffer.py  save_files.py  simul_source.py  simulation_source.py  spectrum_filter.py
mimocorb/: __init__.py  _version_info.py  access_classes.py  activity_logger.py  appl_lib.py  buffer_control.py  bufferinfoGUI.py  histogram_buffer.py  mimo_buffer.py  observer_plot.py  parquetReader.py  plot_buffer.py  pulseSimulator.py
modules/: filter.py
test/: mimocorb  rb_unittest.py  rp_unittest.py
