[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = false

[project]
name = "mimocorb"
dynamic = ["version"]
description = "multi-in multi-out Configurable Ring Buffer for Data Acquisition and Visualisation"
authors = [
    {name = "Günter Quast", email = "Guenter.Quast@online.de"},
    {name = "Klaus Heitlinger", email = "HeitILNK@t-online.de"},
    {name = "Christoph Mayer"} ]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"

keywords = ["karlsruhe", "data", "lab", "laboratory", "practical course",
            "education", "acquisition", "university", "students", "physics"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12" ]

dependencies = [
     "NumPy",
     "Scipy", 
     "Pandas",
     "pyarrow",
     "matplotlib",
     "pyyaml",
     "tk" ]
     
[tool.setuptools.packages.find]
include = ["mimocorb*"]

[tool.setuptools.dynamic]
version = {attr = "mimocorb.__version__"}

[project.urls]
Homepage = "http://www.etp.kit.edu/~quast/"

# options for linting tools 
[tool.black]
line-length = 150

[tool.ruff]
# only differences from default 
line-length = 150

[tool.ruff.lint]
# ignore "unable to detect undefined names", "name may be undefined",
# "undefined name", "ambiguous name", "unused variable"
ignore = ["F403", "F405", "F821", "E741", "F841"]

[tool.ruff.format]
quote-style = "preserve"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
# allow imports not at top
"__init__.py" = ["E402"]
"builddoc/conf.py" = ["E402"]
